--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,11 @@ channels:
 dependencies:
   - python>=3.7
   - pip
+  - captum
   - foolbox
   - matplotlib
   - pytorch
   - torchvision
   - pip:
     - lime
+    - torchray
